<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.a73.hugo.duval.calculator.activities.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/menu"
        style="@style/Result"
        android:layout_width="0dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:contentDescription="Night"

            android:onClick="clickNightHandler"
            android:padding="10dp"
            android:src="?attr/iconDayTime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/menu" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:contentDescription="Night"
            android:onClick="clickMenuHandler"
            android:padding="10dp"
            android:src="@drawable/ic_menu_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/result"
        style="@style/Result"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintTop_toBottomOf="@id/menu"
        tools:text="Résultat" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/touches"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintTop_toBottomOf="@id/result">

        <Button
            android:id="@+id/button_7"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="7"
            android:text="@string/num_7"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_8"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="8"
            android:text="@string/num_8"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintLeft_toRightOf="@id/button_7"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_9"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="9"
            android:text="@string/num_9"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintLeft_toRightOf="@id/button_8"
            app:layout_constraintWidth_percent="0.25" />


        <Button
            android:id="@+id/button_4"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="4"
            android:text="@string/num_4"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_7"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_5"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="5"
            android:text="@string/num_5"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintLeft_toRightOf="@id/button_4"
            app:layout_constraintTop_toBottomOf="@id/button_8"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_6"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="6"
            android:text="@string/num_6"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintLeft_toRightOf="@id/button_5"
            app:layout_constraintTop_toBottomOf="@id/button_9"
            app:layout_constraintWidth_percent="0.25" />


        <Button
            android:id="@+id/button_1"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="1"
            android:text="@string/num_1"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_4"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_2"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="2"
            android:text="@string/num_2"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintLeft_toRightOf="@id/button_1"
            app:layout_constraintTop_toBottomOf="@id/button_5"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_3"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="3"
            android:text="@string/num_3"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintLeft_toRightOf="@id/button_2"
            app:layout_constraintTop_toBottomOf="@id/button_6"
            app:layout_constraintWidth_percent="0.25" />


        <Button
            android:id="@+id/button_0"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="0"
            android:text="@string/num_0"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintLeft_toRightOf="@id/button_virgul"
            app:layout_constraintTop_toBottomOf="@id/button_2"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_del"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="DEL"
            android:text="DEL"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintLeft_toRightOf="@id/button_0"
            app:layout_constraintTop_toBottomOf="@id/button_2"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_virgul"
            style="@style/Button"
            android:onClick="clickHandler"
            android:tag="."
            android:text="@string/num_virgul"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toBottomOf="@id/button_1"
            app:layout_constraintWidth_percent="0.25" />


        <Button
            android:id="@+id/button_equals"
            style="@style/Button_Equals"
            android:onClick="clickHandler"
            android:tag="="
            android:text="@string/num_equals"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintLeft_toRightOf="@id/button_del"
            app:layout_constraintTop_toBottomOf="@id/button_divide"
            app:layout_constraintWidth_percent="0.25" />


        <Button
            android:id="@+id/button_add"
            style="@style/Button_Actions"
            android:onClick="clickHandler"
            android:tag="@string/operation_add"
            android:text="@string/num_pulse"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintLeft_toRightOf="@id/button_9"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_minus"
            style="@style/Button_Actions"
            android:onClick="clickHandler"
            android:tag="@string/operation_subtract"
            android:text="@string/num_minus"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintLeft_toRightOf="@id/button_6"
            app:layout_constraintTop_toBottomOf="@id/button_add"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_multiply"
            style="@style/Button_Actions"
            android:onClick="clickHandler"
            android:tag="@string/operation_multiply"
            android:text="@string/num_multiply"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintLeft_toRightOf="@id/button_3"
            app:layout_constraintTop_toBottomOf="@id/button_minus"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_divide"
            style="@style/Button_Actions"
            android:onClick="clickHandler"
            android:tag="@string/operation_divide"
            android:text="@string/num_divide"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintLeft_toRightOf="@id/button_3"
            app:layout_constraintTop_toBottomOf="@id/button_multiply"
            app:layout_constraintWidth_percent="0.25" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
